--- a/modules/tools/taskrunner/README.org
+++ b/modules/tools/taskrunner/README.org
@@ -13,7 +13,7 @@
 - [[#troubleshooting][Troubleshooting]]
 
 * Description
-This module integrates [[https://github.com/emacs-taskrunner/emacs-taskrunner][Taskrunner]] into Doom Emacs, which scraps runnable tasks
+This module integrates [[https://github.com/emacs-taskrunner/emacs-taskrunner][Taskrunner]] into Doom Emacs, which scrapes runnable tasks
 from build systems like make, gradle, npm and the like.
 
 ** Module Flags
@@ -25,7 +25,7 @@ This module provides no flags.
 + [[https://github.com/emacs-taskrunner/helm-taskrunner][helm-taskrunner]]
 
 * Prerequisites
-This module has no prereqisites.
+This module has no prerequisites.
 
 * Features
 Keybindings
