--- a/docs/api.org
+++ b/docs/api.org
@@ -572,7 +572,7 @@ Alternatively, an updated version exists at
 ** Create a paste-transient-state to cycle through kill ring on paste
 Replaces the default evil-paste binding to paste then let you cycle through entries in your kill ring. Gives you more flexibility when copying to your clipboard, making edits, then deciding to paste after.
 
-You will need to enable the `hydra` module first.
+You will need to enable the =hydra= module first.
 
 #+BEGIN_SRC elisp
 (defhydra hydra-paste (:color red
